--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel='stylesheet' id='headers_font-css' href='//fonts.googleapis.com/css?family=Muli' type='text/css'
-    media='all' />
+  <!-- <link rel='stylesheet' id='headers_font-css' href='//fonts.googleapis.com/css?family=Muli' type='text/css'
+    media='all' /> -->
   <link rel='stylesheet' id='visualcomposerstarter-fonts-css'
     href='//fonts.googleapis.com/css?family=Roboto%3Aregular%2Citalic%26subset%3Dcyrillic%2Ccyrillic-ext%2Cdevanagari%2Cgreek%2Cgreek-ext%2Ckhmer%2Clatin%2Clatin-ext%2Cvietnamese'
     type='text/css' media='screen' />
